opt(cmake) optimize cmakelists and readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,11 +6,11 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_SUPPRESS_REGENERATION ON)
 
+set(CMAKE_CXX_STANDARD 11)
+
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 include(utils)
-
-add_compile_options(-std=c++11)
 
 set(all_source_file "")
 
@@ -36,21 +36,3 @@ endforeach()
 add_executable("${PROJECT_NAME}"
                "${all_source_file}"
                "${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp")
-
-
-# macro(source_group_by_dir source_files)
-#     if(MSVC)
-#         set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
-#         foreach(sgbd_file ${${source_files}})
-#             string(REGEX REPLACE ${sgbd_cur_dir}/.∗ \\1 sgbd_fpath ${sgbd_file})
-#             string(REGEX REPLACE ".∗/.*" \\1 sgbd_group_name ${sgbd_fpath})
-#             string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
-#             string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
-#             if(sgbd_nogroup)
-#                 set(sgbd_group_name "\\")
-#             endif(sgbd_nogroup)
-#             source_group(${sgbd_group_name} FILES ${sgbd_file})
-#         endforeach(sgbd_file)
-#     endif(MSVC)
-# endmacro(source_group_by_dir)
-# source_group_by_dir(all_files)
